[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssh-backchannel"
version = "1.0.0"
description = "A Python-based SSH forced-command gatekeeper for remote callbacks."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "@readwithai", email = "talwrii@gmail.com"}
]
keywords = ["ssh", "callback", "automation", "security"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Topic :: System :: Networking",
]

[project.scripts]
# This maps the command 'ssh-backchannel' to the main function in your module
ssh-backchannel = "ssh_backchannel.main:main"

[tool.hatch.build.targets.wheel]
packages = ["ssh_backchannel"]
